// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OtherScore should render correctly when can be selected 1`] = `
<span
  style={
    Object {
      "whiteSpace": "nowrap",
    }
  }
>
  <select
    className="custom-select"
    onChange={[Function]}
    style={
      Object {
        "width": "84px",
      }
    }
    value="6"
  >
    <option>
      other
    </option>
    <option
      value="5"
    >
      5
    </option>
    <option
      value="6"
    >
      6
    </option>
    <option
      value="7"
    >
      7
    </option>
    <option
      value="8"
    >
      8
    </option>
    <option
      value="9"
    >
      9
    </option>
    <option
      value="10"
    >
      10
    </option>
  </select>
  <button
    className="btn btn-success"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
      }
    }
  >
    <i
      className="fa fa-check"
    />
  </button>
</span>
`;

exports[`OtherScore should render correctly when cannot be selected 1`] = `
<span
  style={
    Object {
      "whiteSpace": "nowrap",
    }
  }
>
  <select
    className="custom-select"
    onChange={[Function]}
    style={
      Object {
        "width": "84px",
      }
    }
    value="other"
  >
    <option>
      other
    </option>
    <option
      value="5"
    >
      5
    </option>
    <option
      value="6"
    >
      6
    </option>
    <option
      value="7"
    >
      7
    </option>
    <option
      value="8"
    >
      8
    </option>
    <option
      value="9"
    >
      9
    </option>
    <option
      value="10"
    >
      10
    </option>
  </select>
  <button
    className="btn btn-success"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
      }
    }
  >
    <i
      className="fa fa-check"
    />
  </button>
</span>
`;

exports[`OtherScore should render correctly when no ball set 1`] = `
<span
  style={
    Object {
      "whiteSpace": "nowrap",
    }
  }
>
  <select
    className="custom-select"
    onChange={[Function]}
    style={
      Object {
        "width": "84px",
      }
    }
    value="other"
  >
    <option>
      other
    </option>
    <option
      value="5"
    >
      5
    </option>
    <option
      value="6"
    >
      6
    </option>
    <option
      value="7"
    >
      7
    </option>
    <option
      value="8"
    >
      8
    </option>
    <option
      value="9"
    >
      9
    </option>
    <option
      value="10"
    >
      10
    </option>
  </select>
  <button
    className="btn btn-danger"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
      }
    }
  >
    <i
      className="fa fa-check"
    />
  </button>
</span>
`;
